--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,13 +2,16 @@
 
 buildscript {
     ext {
+
+        firebaseMessagingVersion = "21.1.0" 
         buildToolsVersion = "29.0.3"
         minSdkVersion = 21
         compileSdkVersion = 29
         targetSdkVersion = 29
         playServicesVersion = "17.0.0" 
-         androidMapsUtilsVersion = "2.2.0"
+        androidMapsUtilsVersion = "2.2.0"
         ndkVersion = "20.1.5948944"
+         supportLibVersion = "23.1.1" // default: 23.1.1
     }
     repositories {
         google()
@@ -16,7 +19,7 @@ buildscript {
     }
     dependencies {
         classpath("com.android.tools.build:gradle:4.1.0")
-       
+        classpath('com.google.gms:google-services:4.3.3')
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
