--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-easy-icon": "^1.0.7",
     "react-native-geolocation-service": "^5.3.0-beta.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-html-to-pdf": "^0.11.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.28.0",
     "react-native-push-notification": "^8.0.1",
